# IrrlichtForever

./: .gitignore  .gitmodules  CMakeLists.txt  IrrlichtForever.code-workspace
cmake/: FindIrrlicht.cmake
commands/: BuildDebug.bat  BuildRelease.bat  Builder.bat  CMakeBuild.bat  CleanDebug.bat  CleanRelease.bat  CreateDirectories.bat  RebuildDebug.bat  RebuildRelease.bat  RunCMakeGUI.bat  SetPaths.bat
projects/: CMakeLists.txt
projects/IrrlichtForever/: App.cpp  App.hpp  App.inl  AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  ClearBufferBit.hpp  Debug.hpp  Debug.inl  PathNavigator.cpp  PathNavigator.hpp  Precompiled.hpp  ResourceManager.cpp  ResourceManager.hpp
projects/IrrlichtForever/Event/: Button.hpp  ButtonState.hpp  EventManager.cpp  EventManager.hpp  EventManager.inl  EventReceiver.hpp  InputEventReceiver.hpp  InputEventReceiver.inl  Key.hpp  KeyState.hpp  Keyboard.hpp  Keyboard.inl  Mouse.hpp  Mouse.inl
projects/IrrlichtForever/Utility/: Concepts.hpp  DepNamespaces.hpp  Macros.hpp  Pointer.cpp  Pointer.hpp  Pointer.inl
projects/Sample/: CMakeLists.txt  GameApp.cpp  GameApp.hpp  Main.cpp
