cmake_minimum_required(VERSION 3.28 FATAL_ERROR)
cmake_policy(VERSION 3.28)

set(IRRLICHT_FOREVER_VERSION 1.0)
project(IrrlichtForever VERSION ${IRRLICHT_FOREVER_VERSION} LANGUAGES CXX)
message("-- \"${PROJECT_NAME}\" project in ${CMAKE_BUILD_TYPE} mode.")

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

if (WIN32)
    set(OS_NAME "Windows")
    set(WINDOWS true)
elseif (UNIX AND NOT APPLE)
    set(OS_NAME "Linux")
    set(LINUX true)
elseif (APPLE)
    set(OS_NAME "Mac")
    set(MAC true)
endif()

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(GCC true)
    if (MINGW)
        set(COMPILER_DIR "mingw/gcc")
    else()
        set(COMPILER_DIR "gcc")
    endif()
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    set(Clang true)
    if (MINGW)
        set(COMPILER_DIR "mingw/clang")
    else()
        set(COMPILER_DIR "clang")
    endif()
endif()

set(OUTPUTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/outputs")
set(BUILD_DIR "${OUTPUTS_DIR}/build/${OS_NAME}/${COMPILER_DIR}")

set_property(GLOBAL PROPERTY PAZU_RESOURCE_GENERATOR_INSTALL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/IrrlichtForever/ResourceGenerator")
set_property(GLOBAL PROPERTY WINAPICOMMON_LANGUAGE_VERSION 20)

add_subdirectory("deps/MagicEnum")
add_subdirectory("deps/PazuResource")
add_subdirectory("projects")
