project(Sample LANGUAGES CXX)

file(GLOB_RECURSE SAMPLE_HEADERS CONFIGURE_DEPENDS **.hpp **.inl)
file(GLOB_RECURSE SAMPLE_SOURCES CONFIGURE_DEPENDS **.cpp)

add_executable(${PROJECT_NAME} ${SAMPLE_HEADERS} ${SAMPLE_SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES
	CXX_STANDARD 23
	CXX_STANDARD_REQUIRED ON
	CMAKE_CXX_EXTENSIONS OFF
	OUTPUT_NAME ${PROJECT_NAME})
target_link_libraries(${PROJECT_NAME} PRIVATE IrrlichtForever)

install(TARGETS
            Sample
        CONFIGURATIONS ${CMAKE_BUILD_TYPE}
	    RUNTIME
            COMPONENT Runtime
            DESTINATION ${OUTPUTS_DIR}/bin/${OS_NAME}/${COMPILER_DIR}/${CMAKE_BUILD_TYPE})
